ft: api to get chains and asset
