# docs/swagger.json
@@ -21,55 +21,13 @@
     },
     "host": "localhost:8085",
     "paths": {
-        "/asset": {
-            "get": {
-                "description": "Get all asset collection of the chain",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "asset"
-                ],
-                "summary": "Get all asset collection of the chain",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Page number",
-                        "name": "page",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Number of items per page",
-                        "name": "limit",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "Owner Address",
-                        "name": "owner",
-                        "in": "query"
-                    },
-                    {
-                        "enum": [
-                            "ERC721",
-                            "ERC1155",
-                            "ERC20"
-                        ],
-                        "type": "string",
-                        "description": "Asset Type",
-                        "name": "asset_type",
-                        "in": "query"
-                    }
-                ],
-                "responses": {}
-            }
-        },
         "/chain": {
             "get": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
                 "description": "Get all supported chains",
                 "consumes": [
                     "application/json"
@@ -81,9 +39,22 @@
                     "chains"
                 ],
                 "summary": "Get all supported chains",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Chain ID",
+                        "name": "chain_id",
+                        "in": "query"
+                    }
+                ],
                 "responses": {}
             },
             "post": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
                 "description": "Add a new chain",
                 "consumes": [
                     "application/json"
@@ -124,6 +95,11 @@
         },
         "/chain/{chain_id}/collection": {
             "get": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
                 "description": "Retrieve all asset collections associated with the specified chain ID.",
                 "consumes": [
                     "application/json"
@@ -134,7 +110,7 @@
                 "tags": [
                     "asset"
                 ],
-                "summary": "Get all asset collections for a specific chain",
+                "summary": "Get all asset in a collection of the chain",
                 "parameters": [
                     {
                         "type": "string",
@@ -142,6 +118,12 @@
                         "name": "chain_id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Collection Address",
+                        "name": "collection_address",
+                        "in": "query"
                     },
                     {
                         "type": "integer",
@@ -159,6 +141,11 @@
                 "responses": {}
             },
             "post": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
                 "description": "Add a new asset collection to the chain",
                 "consumes": [
                     "application/json"
@@ -191,40 +178,13 @@
                 "responses": {}
             }
         },
-        "/chain/{chain_id}/collection/{collection_address}": {
+        "/chain/{chain_id}/collection/{collection_address}/assets": {
             "get": {
-                "description": "Get all asset collection of the chain",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "asset"
-                ],
-                "summary": "Get all asset collection of the chain",
-                "parameters": [
+                "security": [
                     {
-                        "type": "string",
-                        "description": "Chain ID",
-                        "name": "chain_id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Collection Address",
-                        "name": "collection_address",
-                        "in": "path",
-                        "required": true
+                        "BasicAuth": []
                     }
                 ],
-                "responses": {}
-            }
-        },
-        "/chain/{chain_id}/collection/{collection_address}/asset": {
-            "get": {
                 "description": "Get all asset collection of the chain",
                 "consumes": [
                     "application/json"
@@ -264,8 +224,12 @@
                         "in": "query"
                     },
                     {
-                        "type": "string",
-                        "description": "Token ID",
+                        "type": "array",
+                        "items": {
+                            "type": "string"
+                        },
+                        "collectionFormat": "multi",
+                        "description": "Token IDs",
                         "name": "token_id",
                         "in": "query"
                     },
@@ -290,7 +254,7 @@
                 "chain": {
                     "type": "string"
                 },
-                "chainID": {
+                "chainId": {
                     "type": "integer"
                 },
                 "explorer": {
